Solved for scrollbar on the right, adding space below the form

--- a/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/3.00/org.openbravo.client.application/ob-form-styles.css
+++ b/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/3.00/org.openbravo.client.application/ob-form-styles.css
@@ -32,6 +32,7 @@
 
 .OBViewForm {
   margin: 5px 25px 0px 25px;
+  padding: 0px 0px 20px 0px;
 }
 
 /*=======================================================================
@@ -576,6 +577,9 @@
   font-weight: bold;
 }
 
+/*=======================================================================
+ * Used in the label of a foreign key field, for link image 
+=======================================================================*/
 .OBFormFieldLinkButton {
   cursor: pointer;
 }
